CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.7.2-dev

contrib
======================

distributed
----------------------
* Added more robust Progress support for AntBuilder on BuildAgents.
* Remove extraneous synchronized flags.
* Add optional child element <remoteResult> to allow retrieval of additional build artifact directories.
* Change CCDist build to execute in the distributed/target directory (same as cc-main).

build loop
======================

AntBootstrapper/Publisher
----------------------
* Fix uselogger/AntOutputLogger bug. Provides independent showAntOutput attribute on AntBuilder (CC-699). Reported by Jerome Hourquebie.

AntBuilder
----------------------
* Fix validateBuildFileExists() to handle non-absolute, but valid build file with antWorkingDir set to a different work dir on Windows.

Cincom Smalltalk VisualWorks Store Source Control
----------------------
* A sourcecontrol implementation for Cincom Smalltalk VisualWorks Store scm (CC-709). Contributed by Randy Coulman.

CMSynergy
----------------------
* Improved modification query for Telelogic Synergy using "useBindTime" (CC-691). Contributed by Jan Koops.

Commandline
----------------------
* Commandline and therefore all Bootstrappers will now throw a CruiseControlException if processes return a non-zero exit code instead of just logging and continuing.  Triggered by CC-619, CC-449, and CC-450.

CompositeBuilder
----------------------
* Document builder attributes of <composite> builder. Reported by Mark Kefauver and EJ Ciramella.
* Change composite builder to use same technique as Project to detect build errors (in the build log, the "build" tag has an "error" attribute).
* Insert composite builder info into build log for each child builder.
Todo: Rearranging these elements (even nesting childLog elements?), might allow display of these child buider info elements in reporting apps.

Configuration documentation generation